--- a/secondary.html
+++ b/secondary.html
@@ -110,29 +110,9 @@
 						  <li class="active b_search"><a href="#">Поиск</a></li>
 						  <li class="b_catalogs"><a href="#">Каталоги</a></li>
 						  <li class="b_details"><a href="#">Запчасти для ТО</a></li>
-						  <li class="b_oils"><a href="#">Масла</a>
-							  <ul>
-								  <li><a href="#">Поиск</a></li>
-								  <li><a href="#">Каталоги</a></li>
-								  <li><a href="#">Запчасти для ТО и ТО</a></li>
-							  </ul>
-						  </li>
-						  <li class="b_staff"><a href="#">Аксессуары</a>
-						  <ul>
-								  <li><a href="#">Поиск</a></li>
-								  <li><a href="#">Каталоги</a></li>
-								  <li><a href="#">Запчасти для ТО</a></li>
-								  <li><a href="#">Каталоги</a></li>
-								  <li><a href="#">Запчасти для ТО и ТО</a></li>
-							  </ul>						  
-						  </li>
-						  <li class="b_tires"><a href="#">Шины и диски</a>
-						  <ul>
-								  <li><a href="#">Поиск</a></li>
-								  <li><a href="#">Каталоги</a></li>
-								  <li><a href="#">Запчасти для ТО</a></li>
-							  </ul>						  
-						  </li>
+						  <li class="b_oils"><a href="#">Масла</a></li>
+						  <li class="b_staff"><a href="#">Аксессуары</a></li>
+						  <li class="b_tires"><a href="#">Шины и диски</a></li>
 						  <li class="b_details_ex"><a href="#">Б/У запчасти</a></li>
 						</ul>
 					  </div><!--/.nav-collapse -->
@@ -166,81 +146,52 @@
 			  <li><a href="#">Главная</a></li>
 			  <li class="active">Каталог</li>
 			</ul>
-		<div class="row-fluid b_catalog_list-main">
-            <ul class="thumbnails">
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic1.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>Легковые автомобили</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-                  </div>
-                </div>
-              </li>
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic2.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>Грузовые автомобили</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at</p> 
-                  </div>
-                </div>
-              </li>
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic3.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>Спец.техника</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p> 
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-                  </div>
-                </div>
-              </li>
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic4.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>БУ запчасти</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p> 
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-                  </div>
-                </div>
-              </li>
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic5.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>Шины, диски</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quamdapibus ac facilisis in, egestas eget quam.</p> 
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-                  </div>
-                </div>
-              </li>
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic6.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>Аккумуляторы</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p> 
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-                  </div>
-                </div>
-              </li>		  
-            </ul>
+		<div class="row-fluid b_seach_content">
+		 <div class="b_seach_content_wr">
+			<ul class="nav nav-tabs" id="myTab">
+			  <li class="active"><a href="#number">Поиск по номеру детали</a></li>
+			  <li><a href="#name_">Поиск по названию</a></li>
+			  <li><a href="#VIN">Поиск по VIN</a></li>
+			  <li><a href="#search">Поиск с помощью менеджера</a></li>
+			</ul>
+			 
+			<div class="tab-content">
+			  <div class="tab-pane active" id="number">    
+				<form class="navbar-form">
+				  <input type="text" class="span2 b_txt">
+				  <button type="submit" class="btn btn-finder">Найти</button>
+				</form>
+				<div class="b_desc_tab">
+					<label><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></label>
+				</div>
+			</div>
+			  <div class="tab-pane" id="name_">
+				<form class="navbar-form">
+				  <input type="text" class="span2 b_txt">
+				  <button type="submit" class="btn btn-finder">Найти</button>
+				</form>
+				<div class="b_desc_tab">
+					<label><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet,on ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></label>
+				</div>			  
+			  </div>
+			  <div class="tab-pane" id="VIN">
+				<form class="navbar-form">
+				  <input type="text" class="span2 b_txt">
+				  <button type="submit" class="btn btn-finder">Найти</button>
+				</form>
+				<div class="b_desc_tab">
+					<label><p>laboris nisi ut aliquip ex ea commodo consequat.</p></label>
+				</div>				  
+			  </div>
+			  <div class="tab-pane" id="search">
+				<form class="navbar-form">
+				  <input type="text" class="span2 b_txt">
+				  <button type="submit" class="btn btn-finder">Найти</button>
+				</form>		  
+			  </div>
+			</div>
           </div>
+		 </div>
 		<div class="clearfix"></div>
 		<div class="b_title_content">
 			<p>"Автосток" - магазин автозапчастей в Белгороде для самых популярных моделей иномарок. Мы предлагаем Вам широкий ассортимент запчастей отличного качества по выгодным ценам. в нашем интернет-магазине товар всегда в наличии под заказ.</p>
