--- a/secondary_ordinary.html
+++ b/secondary_ordinary.html
@@ -110,29 +110,9 @@
 						  <li class="active b_search"><a href="#">Поиск</a></li>
 						  <li class="b_catalogs"><a href="#">Каталоги</a></li>
 						  <li class="b_details"><a href="#">Запчасти для ТО</a></li>
-						  <li class="b_oils"><a href="#">Масла</a>
-							  <ul>
-								  <li><a href="#">Поиск</a></li>
-								  <li><a href="#">Каталоги</a></li>
-								  <li><a href="#">Запчасти для ТО и ТО</a></li>
-							  </ul>
-						  </li>
-						  <li class="b_staff"><a href="#">Аксессуары</a>
-						  <ul>
-								  <li><a href="#">Поиск</a></li>
-								  <li><a href="#">Каталоги</a></li>
-								  <li><a href="#">Запчасти для ТО</a></li>
-								  <li><a href="#">Каталоги</a></li>
-								  <li><a href="#">Запчасти для ТО и ТО</a></li>
-							  </ul>						  
-						  </li>
-						  <li class="b_tires"><a href="#">Шины и диски</a>
-						  <ul>
-								  <li><a href="#">Поиск</a></li>
-								  <li><a href="#">Каталоги</a></li>
-								  <li><a href="#">Запчасти для ТО</a></li>
-							  </ul>						  
-						  </li>
+						  <li class="b_oils"><a href="#">Масла</a></li>
+						  <li class="b_staff"><a href="#">Аксессуары</a></li>
+						  <li class="b_tires"><a href="#">Шины и диски</a></li>
 						  <li class="b_details_ex"><a href="#">Б/У запчасти</a></li>
 						</ul>
 					  </div><!--/.nav-collapse -->
@@ -144,109 +124,16 @@
 	<div class="middle">
 	  <div class="b_wrapper_fixed">
 		<div class="container">
-			<div class="content">
-			   <div id="myCarousel" class="carousel slide">
-				 <ol class="carousel-indicators">
-					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-				  </ol>
-				  <!-- Carousel items -->
-				  <div class="carousel-inner">
-					<div class="active item"><a href="/"><img src="gfx/slide1.jpg"></a></div>
-					<div class="item"><a href="/"><img src="gfx/slide1.jpg"></a></div>
-					<div class="item"><a href="/"><img src="gfx/slide1.jpg"></a></div>
-				  </div>
-				  <!-- Carousel nav -->
-				  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-				  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-				</div>
-			
+			<div class="content second_page">	
+			<div id="content">
 			<ul class="breadcrumb">
 			  <li><a href="#">Главная</a></li>
 			  <li class="active">Каталог</li>
-			</ul>
-		<div class="row-fluid b_catalog_list-main">
-            <ul class="thumbnails">
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic1.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>Легковые автомобили</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-                  </div>
-                </div>
-              </li>
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic2.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>Грузовые автомобили</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at</p> 
-                  </div>
-                </div>
-              </li>
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic3.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>Спец.техника</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p> 
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-                  </div>
-                </div>
-              </li>
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic4.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>БУ запчасти</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p> 
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-                  </div>
-                </div>
-              </li>
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic5.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>Шины, диски</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quamdapibus ac facilisis in, egestas eget quam.</p> 
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-                  </div>
-                </div>
-              </li>
-              <li class="span4">
-                <div class="thumbnail">
-					<a href="#" class="b_pic">
-					  <img src="gfx/pic6.jpg" alt="">
-					</a>					
-					  <div class="caption">
-						<h3>Аккумуляторы</h3>
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p> 
-						<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
-                  </div>
-                </div>
-              </li>		  
-            </ul>
-          </div>
-		<div class="clearfix"></div>
-		<div class="b_title_content">
-			<p>"Автосток" - магазин автозапчастей в Белгороде для самых популярных моделей иномарок. Мы предлагаем Вам широкий ассортимент запчастей отличного качества по выгодным ценам. в нашем интернет-магазине товар всегда в наличии под заказ.</p>
-					<p>"Автосток" - магазин автозапчастей в Белгороде для самых популярных моделей иномарок. Мы предлагаем Вам широкий ассортимент запчастей отличного качества по выгодным ценам. в нашем интернет-магазине товар всегда в наличии под заказ.</p>
-			<p>"Автосток" - магазин автозапчастей в Белгороде для самых популярных моделей иномарок. Мы предлагаем Вам широкий ассортимент запчастей отличного качества по выгодным ценам. в нашем интернет-магазине товар всегда в наличии под заказ.</p>
-		</div>
+			</ul>				
+				<h1>Каталоги</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+			</div>		
 			</div><!-- .content -->
 			
 		</div><!-- .container-->
